fix: only 3.1 for now

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,35 +2,34 @@ name: CI
 
 on:
   push:
-    branches: [ "master" ]
+    branches: ["master"]
   pull_request:
-    branches: [ "master" ]
+    branches: ["master"]
 
 permissions:
   contents: read
 
 jobs:
   test:
-
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby-version: ['3.0', '3.3']
+        ruby-version: ["3.1", "3.3"]
 
     steps:
-    - uses: actions/checkout@v3
-    
-    - name: Set up Ruby
-      uses: ruby/setup-ruby@v1
-      with:
-        ruby-version: ${{ matrix.ruby-version }}
-        bundler-cache: true
-        
-    - name: Tests
-      run: bundle exec rake spec
+      - uses: actions/checkout@v3
 
-    - name: Lint
-      run: bundle exec rake rubocop
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: ${{ matrix.ruby-version }}
+          bundler-cache: true
 
-    - name: Type check
-      run: bundle exec rake tc
+      - name: Tests
+        run: bundle exec rake spec
+
+      - name: Lint
+        run: bundle exec rake rubocop
+
+      - name: Type check
+        run: bundle exec rake tc
