--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,9 @@ jobs:
       matrix:
         ruby-version: ["3.1", "3.3"]
 
+    env:
+      BUNDLE_WITH: "docs"
+
     steps:
       - uses: actions/checkout@v4
 
@@ -33,3 +36,6 @@ jobs:
 
       - name: Type check
         run: bundle exec rake tc
+
+      - name: Build docs
+        run: bundle exec rake docs
