--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,10 +42,11 @@ jobs:
         with:
           node-version-file: docs/package.json
 
-      - name: Build docs
+      - name: Install NPM packages
         run: |
-          cd docs
-          npm install -g pnpm
-          pnpm install
-          cd ..
-          bundle exec rake docs
+          npm install --global pnpm
+          pnpm install --frozen-lockfile
+        working-directory: ./docs
+
+      - name: Build docs
+        run: bundle exec rake docs
