--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -44,4 +44,4 @@ jobs:
         with:
           fail: true
           args: |
-            docs/build --exclude-all-private --base build --exclude gstatic.com --exclude googleapis.com
+            docs/build --exclude-all-private --base docs/build --exclude gstatic.com --exclude googleapis.com
