--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -53,7 +53,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python_version: "3.12"
+          python-version: "3.12"
 
       - name: Install Vale
         run: pip install vale
