--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -64,5 +64,7 @@ jobs:
         working-directory: ./docs
 
       - name: Annotate Vale issues
-        run: python .vale/annotate.py output.log
+        run: |
+          python .vale/annotate.py output.log
+          sed 's/:/ /g output.log' >> $GITHUB_STEP_SUMMARY
         working-directory: ./docs
