--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -66,5 +66,5 @@ jobs:
       - name: Annotate Vale issues
         run: |
           python .vale/annotate.py output.log
-          sed 's/:/ /g output.log' >> $GITHUB_STEP_SUMMARY
+          sed "s/:/ /g" output.log >> $GITHUB_STEP_SUMMARY
         working-directory: ./docs
