--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -47,6 +47,7 @@ Metrics/MethodLength:
 Metrics/AbcSize:
   Exclude:
     - "lib/frontman/context.rb"
+    - "lib/frontman/helpers/render_helper.rb"
     - "lib/frontman/sitemap_tree.rb"
     - "lib/frontman/data_store.rb"
     - "lib/frontman/builder/statistics_collector.rb"
