--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version-file: docs/package.json
+          node-version: "20.x"
 
       - name: Install dependencies
         working-directory: ./docs
