--- a/docs/.vale.ini
+++ b/docs/.vale.ini
@@ -32,3 +32,5 @@ Google.We = error
 # Rule 2: ignore kramdown's IAL syntax <https://kramdown.gettalong.org/syntax.html#span-ials>
 BlockIgnores = (?s)(<%.*?%>), \
 ({:.*?})
+
+TokenIgnores = (<%.*%>)
