--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -14,6 +14,9 @@ jobs:
     name: Check docs quality
     runs-on: ubuntu-latest
 
+    env:
+      BUNDLE_WITH: "docs"
+
     steps:
       - uses: actions/checkout@v4
 
