--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -5,6 +5,8 @@ on:
   push:
     paths:
       - "docs/content/**/*.html.*"
+    branches:
+      - master
   pull_request:
     paths:
       - "docs/content/**/*.html.*"
