--- a/docs/package.json
+++ b/docs/package.json
@@ -9,6 +9,8 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.8",
     "tailwindcss": "^3.4.14"
   }
 }
